<resources>
    <string name="app_name">pingeb.org</string>

    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="title_activity_artist_detail" translatable="false">ArtistDetailActivity</string>
    <string name="title_activity_qrcode_scanner">QRCodeScannerActivity</string>

    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="menu_item_artists_name">Artists</string>
    <string name="menu_item_map_name">Map</string>
    <string name="menu_item_about_name">About pingeb.org</string>
    <string name="menu_item_settings_name">Settings</string>

    <string name="action_settings" translatable="false">Settings</string>

    <string name="activate_text">Activate</string>
    <string name="cancel_text">Cancel</string>
    <string name="nfc_enable_text">Hey, activate NFC on your phone and discover new pingeb.org stickers.</string>
    <string name="scanned_false_qr_code">You have not scanned a xamoom Sticker.</string>
    <string name="old_pingeborg_sticker_redirect_failure">Error while scanning.</string>
    <string name="scan_qr_text">Scan a sticker!</string>
    <string name="nfc_dialog_title">Activate NFC?</string>
    <string name="distanceLabel">Distance:</string>
    <string name="meterLabel">meter</string>
    <string name="instruction_view_close_phrase">Tap to exit</string>
    <string name="overlay_disocver_new_artists">Scan every week a pingeb.org-sticker to discover new artists</string>
    <string name="overlay_artist_number">3</string>
    <string name="overlay_unlocked_artists">artists are already unlocked for you</string>
    <string name="map_instruction_text">When you are near a pingeb.org-sticker, you can also discover it here.</string>
    <string name="discovered_pingeborg_geofence_message">Found new artist</string>
    <string name="pingeborg_cover_image_text" translatable="false">Pingeborg Cover Image</string>
    <string name="Open">Open</string>
    <string name="Discover">discover</string>

    <string name="beacon_notification_title">Music &amp; Literature from Carinthia</string>
    <string name="beacon_notification_text">Discover in your pingeb.org App</string>
    <string name="beacon_notification_info">Near you</string>

    <string name="bluetooth_dialog_title">Activate Bluetooth</string>
    <string name="bluetooth_enable_text">Discover artists via iBeacons with low energy Bluetooth.</string>
    <string name="error_message_api_call_failed">Error loading data</string>
    <string name="bluetooth_mute_button">Don\'t show again</string>

</resources>
