<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_item_artists_name" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_item_map_name" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_item_about_name" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_item_settings_name" />
    </group>

</menu>
